[ADD] minor styles

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--
+      Very important meta to allow page to be responsive. Adjust font size...
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!--
+     description allows to show small description of the website undernead the Sites name when displayed under the list of the browsers
+    -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Look at a catalog with all your favorite 'Rick and morty' characters"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
